cluster/apps/utils/onetimesecret/deployment-onetimesecret.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: utils
  name: onetimesecret
spec:
  selector:
    matchLabels:
      app: onetimesecret
      component: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: onetimesecret
        component: frontend
    spec:
      containers:
        - name: onetimesecret
          image: tdeutsch/onetimesecret@sha256:1a7a9a91e048d6661bb03065a0377f19201e6a93d5f1705859b14290a50c0fdd
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 7143
          volumeMounts:
            - mountPath: /etc/onetime/config
              name: onetimesecret-config
              subPath: config
      volumes:
        - name: onetimesecret-config
          configMap:
            name: onetimesecret-config
            items:
              - key: config
                path: config
                mode: 0644
