cluster/apps/utils/onetimesecret/service-onetimesecret.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: utils
  name: onetimesecret
  labels:
    app: onetimesecret
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 7143
      targetPort: 7143
      protocol: TCP
      name: http
  selector:
    app: onetimesecret
    component: frontend
